--- a/index.html
+++ b/index.html
@@ -966,8 +966,45 @@
 
 
   <!-- Rithika K	20112369 starts here -->
-  <div class="zone blue">🙂</div>
-  <!-- Rithika K	20112369 ends here -->
+  <div class="container">
+    <div class="zone blue1">
+    <img align="right" src="id photo.jpeg" width="140" height="142" style="border:4px solid black; margin: 0 auto;">
+
+    <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is Rithika</p>
+    <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> rithikak21@email.com </div>
+
+    <p style="font-size: 20px;">My Skills</p>
+    <div class="hContainer">
+      <div class="csty yellow1">Microsoft Exel</div>
+      <div class="csty red1">SQL</div>
+      <div class="csty green1">Python</div>
+      <div class="csty yellow1">Web Development</div>
+      <div class="csty yellow1">R programming</div>
+      <div class="csty green1">Data Analysis</div>
+      <div class="csty yellow1">Machine Learning</div>
+    </div>
+
+    <p style="font-size: 20px;">Projects that i did</p>
+    <div class="hContainer">
+      <div class="csty yellow1">Machine Learning</div>
+      <div class="csty green1">Data Analytics</div>
+    </div>
+
+    <p style="font-size: 20px;">My Hobbies</p>
+    <div class="hContainer">
+      <div class="csty yellow1">Reading Books</div>
+      <div class="csty red1">Listening to music</div>
+      <div class="csty green1">watching movies</div>
+    </div>
+
+    <div class="lifemeanstome">
+      <div>
+        <h4 style="font-size: 20px;">what life means to me</h4>
+        <p style="font-size: 20px;">Passing through time</p>
+      </div>
+    </div>
+
+  </div>  <!-- Rithika K	20112369 ends here -->
   <!-- Noel Mathew 20112333 starts here-->
   <div style = "position:relative; left:150px; top:225px;">
     <p >
